hphp/hack/test/typecheck/fake_nullable.php.exp
File "fake_nullable.php", line 17, characters 10-13:
Was expecting a return type hint (Typing[4030])
